src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__help_overlay_overview.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
    ╭ Help · Overview ─────────────────────────────────────────────────────────────────────────╮    
    │ Overview is the connection browser for traffic RustNet has captured.                   ▐ │    
    │ Find connections by process, address, or protocol, then open one in Details.           ▐ │    
    │                                                                                        ▐ │    
    │ ▎ Connection Navigation                                                                ▐ │    
    │   ↑/k, ↓/j      Select previous or next connection                                     ▐ │    
    │   g, G          Jump to first or last connection                                       ▐ │    
    │   Page Up/Down  Move by one page                                                       ▐ │    
    │   Ctrl+B/F      Move by one page                                                       ▐ │    
    │                                                                                        ▐ │    
    │ ▎ Overview Actions                                                                     ▐ │    
    │   i               Show or hide System sidebar on wide terminals                        ▐ │    
    │   Enter           Open the selected connection in Details                              ▐ │    
    │   /               Enter filter mode                                                    ▐ │    
    │   Esc             Clear the active filter                                              ▐ │    
    │   c               Copy the selected remote address                                       │    
    │   p               Toggle service names and port numbers                                  │    
    │   d               Toggle hostnames and IP addresses                                      │    
    │   s, S            Change sort column or direction                                        │    
    │   a               Toggle process grouping                                                │    
    │   Space           Expand or collapse the selected group                                  │    
    │   ←/→, l          Collapse or expand the selected group                                  │    
    │   t               Toggle historic connections                                            │    
    │   System section  Scroll with j/k, Page Up/Down, or the mouse wheel                      │    
    │   r               Reset grouping, sorting, filter, and history                           │    
    │                                                                                          │    
    │ ▎ Connection Display                                                                     │    
    │   Full color  Active connection                                                          │    
    │   Countdown   Idle; the ▎ stripe and ↓/↑ countdown run yellow to red until removal       │    
    │   Gray        Historic closed connection                                                 │    
    │   ~name       Hostname inferred from an observed DNS response                            │    
    ╰──────────────────────────────────────────────────────────────────────────────────────────╯
