src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__help_tab.snap
---
source: src/ui/mod.rs
expression: output
---
RustNet Monitor - Network Connection Monitor · ↑/↓ scroll                                          █
                                                                                                   █
▎ Key Bindings                                                                                     █
  q                       Quit application (press twice to confirm)                                █
  Ctrl+C                  Quit immediately                                                         █
  x                       Clear all connections (press twice to confirm)                           █
  Tab, ]                  Next tab                                                                 █
  Shift+Tab, [            Previous tab                                                             █
  1-5                     Jump directly to a tab (1=Overview, 2=Details, 3=Activity, 4=Graph,      █
5=Help)                                                                                            █
  ↑/k, ↓/j                Navigate connections (wraps around)                                      █
  g, G                    Jump to first/last connection (vim-style)                                █
  Page Up/Down, Ctrl+B/F  Navigate connections by page                                             █
  Ctrl+D/U                Scroll the Details info panes                                            █
  c                       Copy remote address to clipboard                                         █
  p                       Toggle between service names and port numbers                            █
  d                       Toggle hostnames/IPs on Overview or Egress (TX)/Ingress (RX) on Activity █
  s                       Cycle through sort columns (Bandwidth, Process, etc.)                    █
  S                       Toggle sort direction (ascending/descending)                             █
  a                       Toggle process grouping (aggregate by process)                           █
  Space                   Expand/collapse group (when grouping enabled)                            █
  ←/→ or h/l              Collapse/expand group                                                    █
  t                       Toggle display of historic (closed) connections                          █
  i                       Toggle System info on Overview or interface details on Activity          █
  r                       Reset view (grouping, sort, filter)                                      █
  Enter                   View connection details                                                  █
  Esc                     Return to overview                                                       █
  h                       Toggle this help screen                                                  █
  /                       Enter filter mode on Overview (use ↑/↓ to navigate while typing)         █
                                                                                                   █
▎ Tabs                                                                                             █
  Overview  Connection list with mini traffic graph                                                █
  Details   Full details for selected connection                                                   █
  Activity  Process egress/ingress, bandwidth shares, connections, and interface pulse             █
  Graph     Traffic charts and protocol distribution                                               █
  Help      This help screen                                                                       │
                                                                                                   │
▎ Activity Concepts                                                                                │
  Egress (TX) / Ingress (RX)  Traffic sent from or received by the local process                   │
  60s coverage                Captured connection traffic divided by interface traffic             │
  Retained                    Active traffic plus up to 5,000 recently closed connections          │
  Process attribution         Traffic mapped to a PID or process name; unresolved bytes are        │
Unknown                                                                                            │
  Top remote peer             Highest-volume remote endpoint for the selected direction            │
                                                                                                   │
▎ Mouse Controls                                                                                   │
  Click tab              Switch between tabs                                                       │
  Click row              Select connection                                                         │
  Scroll wheel           Navigate connection list / scroll Details, Activity interfaces, Help      │
  Double-click row       Open connection details                                                   │
