src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__host_dns_analytics.snap
---
source: src/ui/mod.rs
expression: "render_host_dns(140, 32)"
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                    ● eth0
────────────────────────────────────────────────────────────━━━━━━──────────────────────────────────────────────────────────────────────────
Sockets   Interfaces   DNS                                                                                                                  
───────────────────────━━━──────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▎ DNS Outcomes (60s) ──────────────────────────────────────────────────────  ▎ Response Time (matched txid) ────────────────────────────────
Status degraded                                                              p50 45ms   p95 220ms   max 220ms                               
Lookups 5   answered 5   pending 0   timeout 0                               <10ms    ··············································   0%   
NOERROR 3   NXDOMAIN 1   NODATA 0                                            10-50ms  ░░░░░░░▒▒▒▒▒▒▒▓▓▓▓▓▓▓██████▋··················  60%   
SERVFAIL 1   REFUSED 0   other 0                                             50-100ms ░░░▒▒▓▓▓█▎····································  20%   
                                                                             >=100ms  ░░░▒▒▓▓▓█▎····································  20%   
                                                                                                                                            
                                                                                                                                            
▎ Question Names (60s)  sort: lookups ──────────────────────────────────────────────────────────────────────────────────────────────────────
Question                                                                               Type        Lookups   NXDOMAIN  Failures        p95  
api.example.com                                                                        A                 1          0         0       12ms  
cdn.example.com                                                                        A                 1          0         0       25ms  
missing.example.com                                                                    AAAA              1          1         0       84ms  
registry.example.com                                                                   A                 1          0         1      220ms  
updates.example.com                                                                    AAAA              1          0         0       45ms  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 v/V section  o sort  esc back                                                                                               h help  q quit
