src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__host_interface_details.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                    ● eth0
────────────────────────────────────────────────────────────━━━━━━──────────────────────────────────────────────────────────────────────────
Sockets   Interfaces   DNS                                                                                                                  
──────────━━━━━━━━━━────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▎ Interface Statistics ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Interface                                  RX Rate      TX Rate RX Packets TX Packets    RX Err    TX Err    RX Drop    TX Drop Collisions  
eth0                                   512.00 KB/s  128.00 KB/s    1200000     800000         0         0         12          0          0  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 v/V section  esc back                                                                                                       h help  q quit
