src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__host_socket_inventory.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                    ● eth0
────────────────────────────────────────────────────────────━━━━━━──────────────────────────────────────────────────────────────────────────
Sockets   Interfaces   DNS                                                                                                                  
━━━━━━━─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▎ Host Socket States ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
TCP 2   LISTEN 1   ESTAB 1   OPENING 0   CLOSING 0   TIME_WAIT 0   OTHER 0   UDP BOUND 1                                                    
Observed RTT  1 samples   average 24ms   max 24ms                                                                                           
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
▎ Listening and Bound Endpoints  2 rows ────────────────────────────────────────────────────────────────────────────────────────────────────
Proto   State      Local endpoint                        Peer                                 Service             PID Process               
TCP     LISTEN     0.0.0.0:8080                          -                                    webcache           4242 web-server            
UDP     BOUND      127.0.0.1:53                          -                                    domain               53 resolver              
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 v/V section  esc back                                                                                                       h help  q quit
