src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__interfaces_tab.snap
---
source: src/ui/mod.rs
assertion_line: 955
expression: output
---
╭ RustNet Monitor ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Overview  ▏  Details  ▏  Interfaces  ▏  Graph  ▏  Help                                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Interface Statistics (Press 'i' to toggle) ──────────────────────────────────────────────────────────────────────────────────────────────╮
│Interface           RX Rate      TX Rate RX Packets TX Packets    RX Err    TX Err    RX Drop    TX Drop Collisions                       │
│eth0            512.00 KB/s  128.00 KB/s    1200000     800000         0         0         12          0          0                       │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 'h' help | 1-5 jump | Tab/[/] cycle | Esc back to Overview
