src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__loading_screen.snap
---
source: src/ui/mod.rs
assertion_line: 612
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
╭RustNet Monitor───────────────────────────────────────────────────────────────╮
│                                                                              │
│                       ⣾ Loading network connections...                       │
│                                                                              │
│                   Preparing capture and process attribution                  │
│                                                                              │
│                   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣶⣿⣿⣿⣿⣷⣤⡀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣤⣄⡀⠀⠀⠀⠀⠀                   │
│                   ⣀⣠⣴⣾⣿⣿⣿⣷⣦⣄⣀⣀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⣀⣀⣠⣴⣿⣿⣿⣿⣿⣿⣿⣶⣤⣀⣀⠀                   │
╰──────────────────────────────────────────────────────────────────────────────╯
