src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__loading_screen_via_app.snap
---
source: src/ui/mod.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
╭RustNet Monitor───────────────────────────────────────────────────────────────╮
│                                                                              │
│                       ⣾ Loading network connections...                       │
│                                                                              │
│                   Preparing capture and process attribution                  │
│                                                                              │
│                   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣶⣿⣿⣿⣿⣷⣦⡀⠀⠀⠀⠀⠀⢀⣤⣤⣤⣤⣄⡀⠀⠀⠀⠀⠀                   │
│                   ⣀⣠⣶⣿⣿⣿⣿⣿⣶⣄⣀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⣀⣀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣷⣤⣀⣀⠀                   │
╰──────────────────────────────────────────────────────────────────────────────╯
