src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__overview_live_connections.snap
---
source: src/ui/mod.rs
expression: render_overview(false)
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host                                                                    ● eth0
────────────━━━━━━━━━━──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▎ Live Connections ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  Process               Remote                Local              Service    App                      State           RTT Hlth      Rx↓/Tx↑  
                                                                                                                                            
▌ firefox (2001)        140.82.121.4:443      192.168.1.10:51234 https      TCP                      ESTABLISHED    23ms R3/O1 3.1Mi/928Ki  
  systemd-resolved (82… 1.1.1.1:53            192.168.1.10:53    dns        UDP·DNS (example.com)    DNS_QUERY         - R2/T1   47Ki/82Ki  
  sshd (1500)           10.0.0.5:51022        192.168.1.10:22    ssh        TCP                      ESTABLISHED   184ms ok    410Ki/1.7Mi  
  curl (9876)           151.101.1.195:443     192.168.1.10:60123 https      TCP                      TIME_WAIT         - ok            -/-  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
 ↑↓ select  / filter  a group  t history  i info  c copy                                                                     h help  q quit
